--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,12 @@
 {
-  "name": "História em Pílulas",
+  "name": "História",
   "short_name": "História",
-  "description": "Microlearning em História. Aprenda em lições curtas, mesmo offline.",
-  "start_url": "./index.html",
-  "scope": "./",
+  "start_url": "./",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#020617",
   "theme_color": "#0f172a",
-  "lang": "pt-BR",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    {"src":"icon-192.png","sizes":"192x192","type":"image/png"},
+    {"src":"icon-512.png","sizes":"512x512","type":"image/png"}
   ]
 }
