--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,12 @@
 {
-  "name": "História Microlearning",
+  "name": "História",
   "short_name": "História",
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
-  "background_color": "#e0eafc",
-  "theme_color": "#4caf50",
+  "background_color": "#020617",
+  "theme_color": "#0f172a",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
